# practice-coding

./: CMakeLists.txt  main.cpp
c++/WQ/: CMakeLists.txt  README.md  approach_1.cpp  approach_2.cpp  main.cpp  main_cv.cpp  wq.cpp
c++/endian/: CMakeLists.txt  method1.cpp  method2.cpp
c++/lambda/: main.cpp
c++/memory/: main.cpp
c++/queue/: double_queue.cpp
c++/recycling/: main.cpp
go/simple-http-server/: http-servers.go
python/: run_parallel.py
